2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Added a link to the setup side
	menu for the new tags management section.
	
2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/mr/27.sql: Added tables for the new tags and the
	relation between tags and leads.
	
	* godmode/setup/setup_tags.php: Added a section to manage
	the tags.
	
	* include/functions_tags.php: Added functions to work with
	the tags.

2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Added the function 'is_ajax'.
	
	* include/functions_html.php: Added a better functions to
	print the select inputs (from pandora).
	
	* include/styles/integria.css: Improved the style of the
	multiselects.
	
2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/integria_cron.php: Fixed an error that not allowed
	the failed mails to update their failed attempts.
	
2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/projects/project_report.php,
	  include/styles/integria.css: Extended the project report
	with new tables of task and workunit info.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/usuarios/lista_usuarios.php: Added a checkbox in
	the table head to change the state of all the checkboxes at
	once.
	
	TICKET #2615.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/js/integria_incident_search.js,
	  operation/incidents/incident_detail.php: Added checks for
	the global type items when using the linked fields and fixed
	other errors.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/type_detail.php: Fixes on the ticket
	type item update when selecting the 'global field' option.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_type_field.php
	  operation/incidents/type_detail.php: Minor improvements.
	